--- a/index.html
+++ b/index.html
@@ -160,7 +160,43 @@
                             </ul>
                         </section>
 
-                        <h2><a href="navigation/passions.html" style="color: rgb(57, 57, 105);">PROJETS</a></h2>
+                                                <h2><a href="navigation/experiences.html" style="color: rgb(57, 57, 105);">EXPÉRIENCE PROFESSIONNELLE</a></h2>
+                        <section class="cv-item">
+                            <h3>Stage Data Science - ArtMajeur</h3>
+                            <div class="item-details">
+                                <span class="location">Levallois-Perret</span>
+                                <span class="date">10 mois</span>
+                            </div>
+                            <ul>
+                                <li><strong>Analyse data & comportements</strong> : SQL, Python, statistiques.</li>
+                                <li><strong>Modélisation</strong> & sémantique : classification, BERT.</li>
+                                <li>Visualisation & impact : dashboards, rapports, <strong>optimisation data-driven.</strong></li>
+                            </ul>
+                        </section>
+                        <section class="cv-item">
+                            <h3>Commis de salle - Hôtel Eldorado, 4*</h3>
+                            <div class="item-details">
+                                <span class="location">Paris 18</span>
+                                <span class="date">3 mois</span>
+                            </div>
+                            <ul>
+                                <li>Mise en place <strong>autonome</strong>, polyvalence.</li>
+                                <li>Adaptabilité dans un environnement dynamique.</li>
+                            </ul>
+                        </section>
+                        <section class="cv-item">
+                            <h3>Réceptionniste - Pharmacie de Piquerouge</h3>
+                            <div class="item-details">
+                                <span class="location">Gaillac</span>
+                                <span class="date">7 mois</span>
+                            </div>
+                            <ul>
+                                <li>Réception, gestion de stock et mise en rayon des produits.</li>
+                                <li><strong>Rigueur</strong> et rapidité d'exécution.</li>
+                            </ul>
+                        </section>
+
+                        <h2><a href="navigation/projets.html" style="color: rgb(57, 57, 105);">PROJETS</a></h2>
                         <section class="cv-item">
                             <h3>Projet jeu vidéo</h3>
                             <div class="item-details">
@@ -222,43 +258,7 @@
                                 <li>Vibe coding</li>
                             </ul>
                         </section>
-
-                        <h2><a href="navigation/experiences.html" style="color: rgb(57, 57, 105);">EXPÉRIENCE PROFESSIONNELLE</a></h2>
-                        <section class="cv-item">
-                            <h3>Stage Data Science - ArtMajeur</h3>
-                            <div class="item-details">
-                                <span class="location">Levallois-Perret</span>
-                                <span class="date">10 mois</span>
-                            </div>
-                            <ul>
-                                <li><strong>Analyse data & comportements</strong> : SQL, Python, statistiques.</li>
-                                <li><strong>Modélisation</strong> & sémantique : classification, BERT.</li>
-                                <li>Visualisation & impact : dashboards, rapports, <strong>optimisation data-driven.</strong></li>
-                            </ul>
-                        </section>
-                        <section class="cv-item">
-                            <h3>Commis de salle - Hôtel Eldorado, 4*</h3>
-                            <div class="item-details">
-                                <span class="location">Paris 18</span>
-                                <span class="date">3 mois</span>
-                            </div>
-                            <ul>
-                                <li>Mise en place <strong>autonome</strong>, polyvalence.</li>
-                                <li>Adaptabilité dans un environnement dynamique.</li>
-                            </ul>
-                        </section>
-                        <section class="cv-item">
-                            <h3>Réceptionniste - Pharmacie de Piquerouge</h3>
-                            <div class="item-details">
-                                <span class="location">Gaillac</span>
-                                <span class="date">7 mois</span>
-                            </div>
-                            <ul>
-                                <li>Réception, gestion de stock et mise en rayon des produits.</li>
-                                <li><strong>Rigueur</strong> et rapidité d'exécution.</li>
-                            </ul>
-                        </section>
-
+                        
                         <h2><a href="navigation/vie-associative.html" style="color: rgb(57, 57, 105);">VIE ASSOCIATIVE</a></h2>
                         <section class="cv-item">
                             <h3>Animatrice (Bénévolat) - Scouts et Guides de France</h3>
