--- a/navigation/passions.html
+++ b/navigation/passions.html
@@ -38,7 +38,7 @@
         
         <section class="experience-card">
             <div class="card-header">
-                <h2 class="card-title">Cybersécurité en autodidacte</h2>
+                <h2 class="card-title">Apprentissage de la cybersécurité en autodidacte</h2>
                 <div class="card-details-wrapper">
                     <span class="location">Plateformes en ligne</span>
                     <span class="date">Continu</span>
@@ -48,7 +48,7 @@
             <div class="card-content">
                 <ul class="card-description">
                     <li>Analyse et test de systèmes via des environnements dédiés (Pentest).</li>
-                    <li>Pratique régulière de CTF (Capture The Flag) pour le développement de compétences offensives.</li>
+                    <li>Pratique de CTF (Capture The Flag) pour le développement de compétences offensives.</li>
                     <li>Résolution de challenges sur diverses plateformes spécialisées.</li>
                 </ul>
             </div>
@@ -63,25 +63,62 @@
 
         <section class="experience-card">
             <div class="card-header">
-                <h2 class="card-title">Activités & Loisirs</h2>
+                <h2 class="card-title">Sports</h2>
                 <div class="card-details-wrapper">
-                    <span class="location">Divers</span>
-                    <span class="date">Personnel</span>
+                    <span class="location">Paris 13 et Gironde</span>
+                    <span class="date">pratique sportive continue</span>
                 </div>
             </div>
-            
             <div class="card-content">
                 <ul class="card-description">
-                    <li>Photographie et voyages.</li>
-                    <li>Sport : Pratique du Rugby et du Surf.</li>
-                    <li>Œnologie : Membre actif de l'association "La Cave".</li>
+                    <li>Rugby</li>
+                    <li>Musculation</li>
+                    <li>Running</li>
                 </ul>
             </div>
             <div class="chips-footer">
-                <span class="chip">Photographie</span>
-                <span class="chip">Rugby</span>
-                <span class="chip">Voyage</span>
-                <span class="chip">Surf</span>
+                <span class="chip">Esprit d'equipe</span>
+                <span class="chip">Concentration</span>
+                <span class="chip">Implication</span>
+            </div>
+        </section>
+
+        <section class="experience-card">
+            <div class="card-header">
+                <h2 class="card-title">Voyage</h2>
+                <div class="card-details-wrapper">
+                    <span class="location">Localisation variees</span>
+                    <span class="date">Continue</span>
+                </div>
+            </div>
+            <div class="card-content">
+                <ul class="card-description">
+                    <li>Tanzanie (Zanzibar)</li>
+                    <li>Irlande (Sligo, Galway, Limerick, Dublin, Cork, Belfast)</li>
+                    <li>Indonesie (Jakarta, Yogyakarta, Ubud)</li>
+                    <li>Roumanie (Bucarest)</li>
+                </ul>
+            </div>
+            <div class="chips-footer">
+                <span class="chip">Ouverture culturelle</span>
+                <span class="chip">Amelioration du niveau des langues parlees</span>
+            </div>
+        </section>
+
+                <section class="experience-card">
+            <div class="card-header">
+                <h2 class="card-title">Oenologie</h2>
+                <div class="card-details-wrapper">
+                    <span class="location">EPITA - Le Kremlin Bicetre</span>
+                    <span class="date">Depuis 2024</span>
+                </div>
+            </div>
+            <div class="card-content">
+                <ul class="card-description">
+                    <li>Apprentissage du processus pour produire du vin</li>
+                    <li>Presidente de l'association La Cave</li>
+                    <li>Participation a des degustations de vins</li>
+                </ul>
             </div>
         </section>
 
