--- a/navigation/vie-associative.html
+++ b/navigation/vie-associative.html
@@ -49,6 +49,7 @@
                     <li>Encadrement de groupes d'enfants et animation d'activités éducatives quotidiennes.</li>
                     <li>Garantie de la sécurité physique et morale des jeunes.</li>
                     <li>Accompagnement du développement global (affectif, intellectuel et social).</li>
+                    <li>5 a 15h de temps investit par mois</li>
                 </ul>
             </div>
 
@@ -74,6 +75,7 @@
                     <li>Encadrement d'étudiants lors d'événements de communication majeurs.</li>
                     <li>Représentation officielle de l'école sur les salons étudiants et lors des JPO.</li>
                     <li>Accueil et conseil auprès des futurs étudiants et de leurs familles.</li>
+                    <li>Environ 1 week-end par mois donnees a cet engagements</li>
                 </ul>
             </div>
             <div class="chips-footer">
@@ -85,7 +87,7 @@
 
         <section class="experience-card">
             <div class="card-header">
-                <h2 class="card-title">Membre de La Cave - Association du terroir</h2>
+                <h2 class="card-title">Presidente de La Cave - Association du terroir</h2>
                 <div class="card-details-wrapper">
                     <span class="location">EPITA</span>
                     <span class="date">2024 - Présent</span>
@@ -97,12 +99,14 @@
                     <li>Organisation de séances de dégustation de vins et de fromages pour les étudiants.</li>
                     <li>Planification et gestion de visites de caves et de fermes locales.</li>
                     <li>Promotion des produits du terroir français au sein de l'école.</li>
+                    <li>Direction d'un bureau d'association</li>
                 </ul>
             </div>
             <div class="chips-footer">
                 <span class="chip">Organisation</span>
                 <span class="chip">Logistique</span>
                 <span class="chip">Terroir</span>
+                <span class="chip">Management</span>
             </div>
         </section>
 
